# ProyectoOpengl

FausEngine/: CMakeLists.txt  conanfile.txt  config.bat  config2.bat
FausEngine/MotorGrafico/: CMakeLists.txt
FausEngine/MotorGrafico/Headers/: FsCamera.h  FsCollider.h  FsDLL.h  FsDirectionalLight.h  FsGame.h  FsLight.h  FsMaterial.h  FsMaths.h  FsMesh.h  FsObject.h  FsPointLight.h  FsShader.h  FsSkybox.h  FsSpotLight.h  FsText.h  Window.h  stb_image.h
FausEngine/MotorGrafico/Shaders/: FsFragmentShader.glsl  FsVertexShader.glsl
FausEngine/MotorGrafico/Source/: FsCamera.cpp  FsCollider.cpp  FsDirectionalLight.cpp  FsGame.cpp  FsLight.cpp  FsMaterial.cpp  FsMaths.cpp  FsMesh.cpp  FsObject.cpp  FsPointLight.cpp  FsShader.cpp  FsSkybox.cpp  FsSpotLight.cpp  FsText.cpp  Window.cpp
FausEngine/ejemplo/: Escenario.cpp  Escenario.h  UserGame.cpp  UserGame.h  main.cpp
